Fixed root overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
     hsl(237, 49%, 15%)
   );
   min-height: 100vh;
+}
+
+#root {
   overflow-x: hidden;
 }
 
